--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,17 @@
         android:name=".BillsApp"
         android:theme="@style/AppTheme.DayNight">
         <activity
-            android:name=".activities.LoginActivity"
-            android:label="@string/app_name">
+            android:name=".activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".activities.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.DayNight.NoActionBar"/>
     </application>
 
 </manifest>
