--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,15 @@
     package="com.lennoardsilva.androidmobillschallenge">
 
     <application
+        android:name=".BillsApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".BillsApp"
         android:theme="@style/AppTheme.DayNight">
-        <activity
-            android:name=".activities.LoginActivity">
+
+        <activity android:name=".activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,9 +19,15 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activities.MainActivity"
+        <activity
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.DayNight.NoActionBar"/>
+            android:theme="@style/AppTheme.DayNight.NoActionBar" />
+
+        <activity
+            android:name=".activities.EditTransactionActivity"
+            android:label="@string/edit_transaction"/>
+
     </application>
 
 </manifest>
