--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha06'
 
     //implementation 'com.google.firebase:firebase-analytics:17.4.3'
-    //implementation 'com.google.firebase:firebase-core:17.4.3'
+    implementation 'com.google.firebase:firebase-core:17.4.3'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-firestore-ktx:21.4.3'
